@@ -114,6 +114,11 @@ static inline arangodb::AgencyOperation IncreaseVersion() {
                                    arangodb::AgencySimpleOperationType::INCREMENT_OP};
 }
 
+static inline std::string collectionPath(std::string const& dbName,
+                                         std::string const& collection) {
+  return "Plan/Collections/" + dbName + "/" + collection;
+}
+
 static inline arangodb::AgencyOperation CreateCollectionOrder(std::string const& dbName,
                                                               std::string const& collection,
                                                               VPackSlice const& info,
@@ -127,16 +132,24 @@ static inline arangodb::AgencyOperation CreateCollectionOrder(std::string const&
     TRI_ASSERT(info.get(arangodb::StaticStrings::IsBuilding).getBool() == true);
   }
 #endif
-  arangodb::AgencyOperation op{"Plan/Collections/" + dbName + "/" + collection,
+  arangodb::AgencyOperation op{collectionPath(dbName, collection),
                                arangodb::AgencyValueOperationType::SET, info};
   op._ttl = timeout;
   return op;
 }
 
+
+static inline arangodb::AgencyPrecondition CreateCollectionOrderPrecondition(
+    std::string const& dbName, std::string const& collection, VPackSlice const& info) {
+  arangodb::AgencyPrecondition prec{collectionPath(dbName, collection),
+                                    arangodb::AgencyPrecondition::Type::VALUE, info};
+  return prec;
+}
+
 static inline arangodb::AgencyOperation CreateCollectionSuccess(
     std::string const& dbName, std::string const& collection, VPackSlice const& info) {
   TRI_ASSERT(!info.hasKey(arangodb::StaticStrings::IsBuilding));
-  return arangodb::AgencyOperation{"Plan/Collections/" + dbName + "/" + collection,
+  return arangodb::AgencyOperation{collectionPath(dbName,collection),
                                    arangodb::AgencyValueOperationType::SET, info};
 }
 
@@ -1486,7 +1499,9 @@ int ClusterInfo::dropDatabaseCoordinator(std::string const& name,
                                     AgencyPrecondition::Type::EMPTY, false);
   AgencyWriteTransaction trans({delPlanDatabases, delPlanCollections, delPlanViews, incrementVersion},
                                databaseExists);
-
+  VPackBuilder hass;
+  trans.toVelocyPack(hass);
+  LOG_DEVEL << hass.toJson();
   AgencyCommResult res = ac.sendTransactionWithFailover(trans);
   if (!res.successful()) {
     if (res._statusCode == (int)arangodb::rest::ResponseCode::PRECONDITION_FAILED) {
@@ -1798,6 +1813,13 @@ Result ClusterInfo::createCollectionsCoordinator(std::string const& databaseName
         basics::VelocyPackHelper::getStringValue(info.json, StaticStrings::DistributeShardsLike,
                                                  StaticStrings::Empty);
     if (!otherCidString.empty() && conditions.find(otherCidString) == conditions.end()) {
+      // Distribute shards like case.
+      // Precondition: Master collection is not moving while we create this
+      // collection We only need to add these once for every Master, we cannot
+      // add multiple because we will end up with duplicate entries.
+      // NOTE: We do not need to add all collections created here, as they will not succeed
+      // In callbacks if they are moved during creation.
+      // If they are moved after creation was reported success they are under protection by Supervision.
       conditions.emplace(otherCidString);
       otherCidShardMap = getCollection(databaseName, otherCidString)->shardIds();
       // Any of the shards locked?
@@ -1924,22 +1946,32 @@ Result ClusterInfo::createCollectionsCoordinator(std::string const& databaseName
       cbGuard.fire();
       // Now we need to remove TTL + the IsBuilding flag in Agency
       opers.clear();
+      precs.clear();
       opers.push_back(IncreaseVersion());
       for (auto const& info : infos) {
-        opers.push_back(CreateCollectionSuccess(databaseName, info.collectionID, info.json));
+        opers.emplace_back(
+            CreateCollectionSuccess(databaseName, info.collectionID, info.json));
+        // NOTE:
+        // We cannot do anything better than: "noone" has modified our collections while
+        // we tried to create them...
+        // Preconditions cover against supervision jobs injecting other leaders / followers during failovers.
+        // If they are it is not valid to confirm them here. (bad luck we were almost there)
+        precs.emplace_back(CreateCollectionOrderPrecondition(databaseName, info.collectionID,
+                                                             info.isBuildingSlice()));
       }
       // TODO: Should we use preconditions?
 
-      AgencyWriteTransaction transaction(opers);
+      AgencyWriteTransaction transaction(opers, precs);
 
       // This is a best effort, in the worst case the collection stays:
       auto res = ac.sendTransactionWithFailover(transaction);
       if (!res.successful()) {
-        // Everything worked, report success
+        // could not update TTL
         for (auto const& info : infos) {
           TRI_ASSERT(info.state == ClusterCollectionCreationInfo::State::DONE);
           events::CreateCollection(info.name, res.errorCode());
         }
+        return TRI_ERROR_CLUSTER_COULD_NOT_CREATE_COLLECTION;
       } else {
         // Everything worked, report success
         for (auto const& info : infos) {
